; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_GetEnable_B.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_GetEnable_B.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }
%struct.enc_private = type { i32 }

@CRBBIT_CLKENAB_B = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_device*, %struct.enc_private*)* @GetEnable_B to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetEnable_B(%struct.comedi_device* %0, %struct.enc_private* %1) #0 {
  %3 = alloca %struct.comedi_device*, align 8
  %4 = alloca %struct.enc_private*, align 8
  store %struct.comedi_device* %0, %struct.comedi_device** %3, align 8
  store %struct.enc_private* %1, %struct.enc_private** %4, align 8
  %5 = load %struct.comedi_device*, %struct.comedi_device** %3, align 8
  %6 = load %struct.enc_private*, %struct.enc_private** %4, align 8
  %7 = getelementptr inbounds %struct.enc_private, %struct.enc_private* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @DEBIread(%struct.comedi_device* %5, i32 %8)
  %10 = load i32, i32* @CRBBIT_CLKENAB_B, align 4
  %11 = ashr i32 %9, %10
  %12 = and i32 %11, 1
  ret i32 %12
}

declare dso_local i32 @DEBIread(%struct.comedi_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
